More flexible bot architecture